--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "tela-login",
+  "homepage": "https://github.com/JonatasGomesss/tela_Login",
   "private": true,
   "type": "module",
   "version": "0.0.0",
   "scripts": {
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -16,6 +18,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
+    "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "sass-embedded": "^1.86.3",
     "unplugin-fonts": "^1.3.1",
