--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tela-login",
-  "homepage": "https://github.com/JonatasGomesss/tela_Login",
+  "homepage": "https://jonatasgomesss.github.io/tela_Login",
   "private": true,
   "type": "module",
   "version": "0.0.0",
